<resources>
    <string name="app_name">CareerHunt</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="category_prompt">Categories</string>

    <!-- InterviewPrep part-->
    <string-array name="interview">
        <item>FAQ</item>
        <item>Interview Tips</item>
        <item>Practice Interview</item>
    </string-array>

    <string-array name="InterviewCat">
        <item>Common Question</item>
        <item>Accounting</item>
        <item>Administrative</item>
        <item>Office Support</item>
        <item>Art and Design</item>
        <item>Banking and Finance</item>
        <item>Customer Service</item>
        <item>Construction</item>
        <item>Consulting</item>
        <item>Education</item>
        <item>Engineering</item>
        <item>Farming and Animal</item>
        <item>Healthcare</item>
        <item>Human Resource</item>
        <item>IT and Computing</item>
        <item>Manufacturing</item>
        <item>Marketing</item>
        <item>Science</item>
        <item>Retail</item>
        <item>Sales</item>
        <item>Insurance</item>
        <item>Hospitality</item>
    </string-array>

    <!-- User management part-->
    <string name="edit_profile">Edit Profile</string>
    <string name="job_listing">Job Listing</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="languages">Languages</string>
    <string name="faq">FAQ</string>
    <string name="logout">Logout</string>
    <string name="change_profile_picture">Change profile picture</string>
    <string name="company_nemail">Company\nEmail</string>
    <string name="company_nname">Company\nName</string>
    <string name="phone_no">Phone No.</string>
    <string name="company_naddress">Company\nAddress</string>
    <string name="save_changes">Save Changes</string>
    <string name="name">Name</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="job_field">Job Field</string>
    <string name="bookmark">Bookmark</string>
    <string name="applied">Applied</string>
    <string name="company_details">Company Details</string>
    <string name="company_email">Company Email</string>
    <string name="password">Password</string>
    <string name="phone_number_eg_0123456789">Phone Number (eg.012-3456789)</string>
    <string name="company_address">Company Address</string>
    <string name="company_name">Company Name</string>
    <string name="submit">Submit</string>
    <string name="email">Email</string>
    <string name="personal_details">Personal Details</string>
    <string name="new_password">New Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="reset">Reset</string>
    <string name="reset_your_current_password">Reset your current password</string>
    <string name="account_type">Account Type</string>
    <string name="business">Business</string>
    <string name="personal">Personal</string>
    <string name="forget_password">Forget Password</string>
    <string name="login">Login</string>
    <string name="no_account_yet">No Account Yet?</string>
    <string name="register">Register</string>
    <string name="business_account">Business Account</string>
    <string name="personal_account">Personal Account</string>
    <string name="applicant_applied">Applicant Applied:</string>
    <string name="job_applied">Job Applied:</string>
    <string name="job_published">Job Published:</string>
    <string name="view_resume">View Resume</string>
    <string name="user_profile">User Profile</string>
    <string name="information">Information</string>
    <string name="preference">Preference</string>
    <string name="frequently_asked_questions">Frequently Asked Questions</string>
    <string name="register_account">Register Account</string>
    <string name="view_applicant">View Applicant</string>
    <string name="my_applied_job">My Applied Job</string>
    <string name="published_job">Published Job</string>
    <string name="setting_page">SETTING PAGE</string>
    <string name="reject">Reject</string>
    <string name="accept">Accept</string>
    <string name="sure">Sure</string>

    <string-array name="state">
        <item></item>
        <item>Kuala Lumpur</item>
        <item>Johor</item>
        <item>Kedah</item>
        <item>Kelantan</item>
        <item>Malacca</item>
        <item>Negeri Sembilan</item>
        <item>Pahang</item>
        <item>Penang</item>
        <item>Perak</item>
        <item>Perlis</item>
        <item>Sabah</item>
        <item>Sarawak</item>
        <item>Selangor</item>
        <item>Terengganu</item>
    </string-array>
    <string-array name="johor_city">
        <item></item>
        <item>Batu Pahat</item>
        <item>Jahor Bahru</item>
        <item>Kluang</item>
        <item>Kota Tinggi</item>
        <item>Kulai</item>
        <item>Mersing</item>
        <item>Muar</item>
        <item>Pontian Kechil</item>
        <item>Segamat</item>
        <item>Tangkak</item>
    </string-array>
    <string-array name="kedah_city">
        <item></item>
        <item>Baling</item>
        <item>Serdang</item>
        <item>Alor Setar</item>
        <item>Sungai Petani</item>
        <item>Jitra</item>
        <item>Kulim</item>
        <item>Kuah</item>
        <item>Kuala Nerang</item>
        <item>Pendang</item>
        <item>Pokok Sena</item>
        <item>Sik</item>
        <item>Yan Besar</item>
    </string-array>
    <string-array name="kelantan_city">
        <item></item>
        <item>Bachok</item>
        <item>Gua Musang</item>
        <item>Jeli</item>
        <item>Kota Bharu</item>
        <item>Kuala Krai</item>
        <item>Machang</item>
        <item>Pasir Mas</item>
        <item>Pasir Puteh</item>
        <item>Tanah Merah</item>
        <item>Tumpat</item>
    </string-array>
    <string-array name="malacca_city">
        <item></item>
        <item>Alor Gajah</item>
        <item>Jasin</item>
        <item>Malacca City</item>
    </string-array>
    <string-array name="nSembilan_city">
        <item></item>
        <item>Kuala Klawang</item>
        <item>Bandar Seri Jempol</item>
        <item>Kuala Pilah</item>
        <item>Port Dickson</item>
        <item>Rembau</item>
        <item>Seremban</item>
        <item>Tampin</item>
    </string-array>
    <string-array name="pahang_city">
        <item></item>
        <item>Bentong</item>
        <item>Bandar Bera</item>
        <item>Tanah Rata</item>
        <item>Jerantut</item>
        <item>Kuantan</item>
        <item>Kuala Lipis</item>
        <item>Maran</item>
        <item>Pekan</item>
        <item>Raub</item>
        <item>Kuala Rompin</item>
        <item>Temerloh</item>
    </string-array>
    <string-array name="penang_city">
        <item></item>
        <item>Bukit Mertajam</item>
        <item>Kepala Batas</item>
        <item>George Town</item>
        <item>Sungai Jawi</item>
        <item>Balik Pulau</item>
    </string-array>
    <string-array name="perak_city">
        <item></item>
        <item>Bagan Datuk</item>
        <item>Tapah</item>
        <item>Teluk Intan</item>
        <item>Gerik</item>
        <item>Kampar</item>
        <item>Parit Buntar</item>
        <item>Batu Gajah</item>
        <item>Kuala Kangsar</item>
        <item>Taiping</item>
        <item>Seri Manjung</item>
        <item>Tanjung Malim</item>
        <item>Seri Iskandar</item>
    </string-array>
    <string-array name="perlis_city">
        <item></item>
        <item>Kangar</item>
    </string-array>
    <string-array name="sabah_city">
        <item></item>
        <item>Interior</item>
        <item>Kudat</item>
        <item>Sandakan</item>
        <item>Tawau</item>
        <item>West Coast</item>
    </string-array>
    <string-array name="sarawak_city">
        <item></item>
        <item>Betong</item>
        <item>Bintulu</item>
        <item>Kapit</item>
        <item>Kuching</item>
        <item>Limbang</item>
        <item>Miri</item>
        <item>Mukah</item>
        <item>Samarahan</item>
        <item>Sarikei</item>
        <item>Serian</item>
        <item>Sibu</item>
        <item>Sri Aman</item>
    </string-array>
    <string-array name="selangor_city">
        <item></item>
        <item>Bandar Baru Selayang</item>
        <item>Bandar Baru Bangi</item>
        <item>Kuala Kubu Bharu</item>
        <item>Klang</item>
        <item>Teluk Datok</item>
        <item>Kuala Selangor</item>
        <item>Subang</item>
        <item>Sabak</item>
        <item>Salak Tinggi</item>
    </string-array>
    <string-array name="terengganu_city">
        <item></item>
        <item>Kampung Raja</item>
        <item>Kuala Dungun</item>
        <item>Kuala Berang</item>
        <item>Chukai</item>
        <item>Kuala Nerus</item>
        <item>Kuala Terengganu</item>
        <item>Marang</item>
        <item>Bandar Permaisuri</item>
    </string-array>
    <string-array name="kualaLumpur_city">
        <item></item>
        <item>Kepong</item>
        <item>Batu</item>
        <item>Wangsa Maju</item>
        <item>Segambut</item>
        <item>Setiawangsa</item>
        <item>Titiwangsa</item>
        <item>Bukit Bintang</item>
        <item>Seputeh</item>
        <item>Cheras</item>
        <item>Bandar Tun Razak</item>
        <item>Lembah Pantai</item>
    </string-array>
    <string-array name="jobCategory">
        <item></item>
        <item>Accounting</item>
        <item>Administrative</item>
        <item>Office Support</item>
        <item>Art and Design</item>
        <item>Banking and Finance</item>
        <item>Customer Service</item>
        <item>Construction</item>
        <item>Consulting</item>
        <item>Education</item>
        <item>Engineering</item>
        <item>Farming and Animal</item>
        <item>Healthcare</item>
        <item>Human Resource</item>
        <item>IT and Computing</item>
        <item>Manufacturing</item>
        <item>Marketing</item>
        <item>Science</item>
        <item>Retail</item>
        <item>Sales</item>
        <item>Insurance</item>
        <item>Hospitality</item>
    </string-array>

    <string-array name="nothing">

    </string-array>

    <string-array name="job_field">
        <item>Information Technology</item>
        <item>Computer Science</item>
        <item>Broadcasting Media</item>
        <item>Finance</item>
        <item>Accounting</item>
        <item>Human Resource</item>
    </string-array>

    <string-array name="language">
        <item>English</item>
        <item>Chinese</item>
        <item>Malay</item>
    </string-array>
</resources>