<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ForgetPassFrag"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#00FFFFFF"
    tools:context=".ForgetPassword">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/detailTop"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:background="#138EF0"
        android:padding="20dp"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="-16dp">

        <ImageButton
            android:id="@+id/btnBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:background="#138ef0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/baseline_arrow_back_24" />

        <TextView
            android:id="@+id/QuestionAns"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forget_password"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
    <ImageView
        android:id="@+id/imageView"
        android:layout_width="286dp"
        android:layout_height="192dp"
        android:layout_marginTop="80dp"
        app:layout_constraintBottom_toTopOf="@id/txtResetMsg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/applogo" />

    <TextView
        android:id="@+id/txtAccType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="28dp"
        android:drawablePadding="10dp"
        android:textColor="@color/textColor2"
        android:text="@string/account_type"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtResetMsg" />

    <RadioGroup
        android:id="@+id/rgAccType"
        android:layout_width="297dp"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="10dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/txtAccType"
        app:layout_constraintTop_toBottomOf="@id/txtResetMsg">

        <RadioButton
            android:id="@+id/rbBusiness"
            android:layout_width="115dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:checked="false"
            android:padding="2dp"
            android:text="@string/business"
            android:textAlignment="center"
            android:textSize="18sp"
            tools:layout_editor_absoluteX="26dp"
            tools:layout_editor_absoluteY="590dp" />

        <RadioButton
            android:id="@+id/rbPersonal"
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:checked="false"
            android:padding="2dp"
            android:text="@string/personal"
            android:textAlignment="center"
            android:textSize="18sp" />
    </RadioGroup>


    <EditText
        android:id="@+id/tfEmail"
        style="@style/CustomEditTextStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/custom_input"
        android:breakStrategy="simple"
        android:drawableStart="@drawable/custom_email_icon"
        android:drawablePadding="12dp"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rgAccType"
        />

    <EditText
        android:id="@+id/tfNewPass"
        style="@style/CustomEditTextStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/custom_input"
        android:drawableStart="@drawable/custom_lock_icon"
        android:drawablePadding="12dp"
        android:ems="10"
        android:hint="@string/new_password"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tfEmail" />

    <EditText
        android:id="@+id/tfConfirmPass"
        style="@style/CustomEditTextStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/custom_input"
        android:drawableStart="@drawable/custom_lock_icon"
        android:drawablePadding="12dp"
        android:ems="10"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tfNewPass" />

    <Button
        android:id="@+id/btnResetPass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginTop="40dp"
        android:layout_marginStart="48dp"
        android:layout_marginEnd="48dp"
        android:textSize="18sp"
        android:text="@string/reset"
        android:background="@drawable/custom_button"
        style="@style/buttonStyle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tfConfirmPass" />

    <TextView
        android:id="@+id/txtResetMsg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reset_your_current_password"
        android:layout_marginTop="10dp"
        android:textColor="#3E7AE1"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageView" />

</androidx.constraintlayout.widget.ConstraintLayout>