<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/regBAFrag"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#00FFFFFF"
    tools:context=".RegisterBusiness">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/detailTop"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:background="#138EF0"
        android:padding="20dp"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="-16dp">

        <ImageButton
            android:id="@+id/btnBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:background="#138ef0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/baseline_arrow_back_24" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register_account"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageView
        android:id="@+id/imgLogo"
        android:layout_width="174dp"
        android:layout_height="154dp"
        android:layout_marginTop="70dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/applogo" />

    <EditText
        android:id="@+id/tfCompEmail"
        style="@style/Widget.Material3.AutoCompleteTextView.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="55dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/custom_input"
        android:breakStrategy="simple"
        android:drawableStart="@drawable/custom_email_icon"
        android:drawablePadding="12dp"
        android:ems="10"
        android:hint="@string/company_email"
        android:inputType="textEmailAddress"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:textSize="17sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtRegisterMsg" />

    <EditText
        android:id="@+id/tfPass"
        style="@style/Widget.Material3.AutoCompleteTextView.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="55dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/custom_input"
        android:drawableStart="@drawable/custom_lock_icon"
        android:drawablePadding="12dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tfCompEmail" />

    <EditText
        android:id="@+id/tfCompPhone"
        style="@style/Widget.Material3.AutoCompleteTextView.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="55dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/custom_input"
        android:drawableStart="@drawable/custom_phone"
        android:drawablePadding="12dp"
        android:ems="10"
        android:hint="@string/phone_number_eg_0123456789"
        android:inputType="phone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tfCompName" />

    <EditText
        android:id="@+id/tfCompAddr"
        style="@style/Widget.Material3.AutoCompleteTextView.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="55dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/custom_input"
        android:drawableStart="@drawable/custom_location_icon"
        android:drawablePadding="12dp"
        android:ems="10"
        android:hint="@string/company_address"
        android:inputType="textMultiLine"
        android:textColor="@android:color/black"
        android:textSize="17sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tfCompPhone" />

    <EditText
        android:id="@+id/tfCompName"
        style="@style/Widget.Material3.AutoCompleteTextView.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="55dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/custom_input"
        android:drawableStart="@drawable/custom_business_icon"
        android:drawablePadding="12dp"
        android:ems="10"
        android:hint="@string/company_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tfPass" />

    <TextView
        android:id="@+id/txtRegisterMsg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="12dp"
        android:text="@string/company_details"
        android:textColor="#3E7AE1"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgLogo" />

    <Button
        android:id="@+id/btnRegister"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_gravity="start"
        android:layout_marginTop="36dp"
        android:text="@string/submit"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tfCompAddr" />

</androidx.constraintlayout.widget.ConstraintLayout>