<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/registerFrag"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#00FFFFFF"
    tools:context=".RegisterAccount">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/headerPublishedJob"
        android:layout_width="420dp"
        android:layout_height="50dp"
        android:layout_marginTop="5dp"
        android:background="#138ef0"
        android:minHeight="?attr/actionBarSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:title="             Register Personal Account"
        app:titleTextColor="#FFFFFF" />

    <ImageButton
        android:id="@+id/btnBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="13dp"
        android:background="#138ef0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/baseline_arrow_back_24" />

    <ImageView
        android:id="@+id/imgLogo"
        android:layout_width="180dp"
        android:layout_height="166dp"
        android:layout_marginTop="70dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/applogo" />


    <TextView
        android:id="@+id/txtRegisterMsg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:text="@string/personal_details"
        android:textColor="#3E7AE1"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgLogo" />

    <EditText
        android:id="@+id/tfName"
        style="@style/CustomEditTextStyle"
        android:layout_width="0dp"
        android:layout_height="55dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/custom_input"
        android:drawableStart="@drawable/custom_name"
        android:drawablePadding="12dp"
        android:ems="10"
        android:hint="Name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tfPass" />

    <EditText
        android:id="@+id/tfEmail"
        style="@style/CustomEditTextStyle"
        android:layout_width="0dp"
        android:layout_height="55dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/custom_input"
        android:breakStrategy="simple"
        android:drawableStart="@drawable/custom_email_icon"
        android:drawablePadding="12dp"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:textSize="17sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtRegisterMsg" />

    <TextView
        android:id="@+id/txtGender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="24dp"
        android:drawablePadding="10dp"
        android:text="@string/gender"
        android:textColor="@color/textColor2"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tfPhone"
        app:drawableStartCompat="@drawable/baseline_transgender_24" />

    <EditText
        android:id="@+id/tfPass"
        style="@style/CustomEditTextStyle"
        android:layout_width="0dp"
        android:layout_height="55dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/custom_input"
        android:drawableStart="@drawable/custom_lock_icon"
        android:drawablePadding="12dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tfEmail" />

    <EditText
        android:id="@+id/tfPhone"
        style="@style/CustomEditTextStyle"
        android:layout_width="0dp"
        android:layout_height="55dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/custom_input"
        android:drawableStart="@drawable/custom_phone"
        android:drawablePadding="12dp"
        android:ems="10"
        android:hint="@string/phone_number_eg_0123456789"
        android:inputType="phone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tfName" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="297dp"
        android:layout_height="49dp"
        android:layout_gravity="center"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="10dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.407"
        app:layout_constraintStart_toEndOf="@id/txtGender"
        app:layout_constraintTop_toBottomOf="@id/tfPhone">

        <RadioButton
            android:id="@+id/rbMale"
            android:layout_width="115dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:checked="false"
            android:padding="2dp"
            android:text="@string/male"
            android:textAlignment="center"
            android:textSize="18sp"
            tools:layout_editor_absoluteX="26dp"
            tools:layout_editor_absoluteY="590dp" />

        <RadioButton
            android:id="@+id/rbFemale"
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:checked="false"
            android:padding="2dp"
            android:text="@string/female"
            android:textAlignment="center"
            android:textSize="18sp" />
    </RadioGroup>

    <TextView
        android:id="@+id/txtEduLevel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="35dp"
        android:drawableStart="@drawable/baseline_job_field"
        android:drawablePadding="10dp"
        android:text="Job Field"
        android:textColor="@color/textColor2"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtGender" />


    <Spinner
        android:id="@+id/spEduLevel"
        style="@style/Widget.AppCompat.Light.Spinner.DropDown.ActionBar"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="5dp"
        android:drawablePadding="12dp"
        android:dropDownWidth="wrap_content"
        android:entries="@array/job_field"
        android:spinnerMode="dropdown"
        app:layout_constraintBaseline_toBaselineOf="@+id/txtEduLevel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@id/txtEduLevel" />

    <Button
        android:id="@+id/btnSubmit"
        style="@style/buttonStyle"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/custom_button"
        android:text="@string/submit"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@+id/spEduLevel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>